<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/post_user_image_card"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:cardCornerRadius="40dp"
        app:cardElevation="8dp"
        android:shape="ring"
        tools:ignore="MissingConstraints"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp">

        <ImageView
            android:id="@+id/post_user_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/todo"
            android:src="@drawable/profile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.cardview.widget.CardView>



    <TextView
        android:id="@+id/post_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/sibonelo"
        app:layout_constraintStart_toEndOf="@+id/post_user_image_card"
        tools:layout_editor_absoluteY="16dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/post_user_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/mlambosboh_gmail_com"
        app:layout_constraintStart_toEndOf="@+id/post_user_image_card"
        tools:layout_editor_absoluteY="47dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/post_recipe_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mocha_mama_jeqe"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        app:layout_constraintStart_toEndOf="@+id/post_user_email"
        tools:layout_editor_absoluteY="96dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"/>

    <ImageView
        android:id="@+id/post_recipe_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/post_recipe_name"
        app:srcCompat="@drawable/image_button"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="128dp" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/post_recipe_time_layout_main"
        app:layout_constraintTop_toBottomOf="@+id/post_recipe_image">

        <TextView
            android:id="@+id/post_recipe_instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lorem"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"/>

        <TextView
            android:id="@+id/post_recipe_ingredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ingredient"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:id="@+id/post_recipe_time_layout"
            android:layout_weight="2"
            android:layout_marginEnd="16dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_timer"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/post_recipe_cooking_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/_01_25" />


        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/post_recipe_likes_comments"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_weight="4"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_recipe_time_layout_main"
        tools:ignore="MissingConstraints">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:src="@drawable/ic_heart_black"
            tools:ignore="NestedWeights" />

        <TextView
            android:id="@+id/post_recipe_num_likes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:text="@string/_1" />

        <TextView
            android:id="@+id/post_recipe_comments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:text="@string/comments" />

        <TextView
            android:id="@+id/post_recipe_num_comments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:text="@string/_5" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>